--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: David Rodríguez | Fullstack Developer
 description: I am Ruby on Rails and React developer.
-url: https://bitbucket.org/Denzil90/portfolio_jekyll
+url: https://portfolio-jekyll-denzilrh90.vercel.app
 baseurl: ''
 theme_skin: blue
 
